# transcribe-toolkit

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  Taskfile.yml  config.yaml  config.yaml.example  pyproject.toml  run-local.sh  run.sh  setup.sh
.claude/skills/translate/: SKILL.md
local_transcribe/: cli.py  config.py  extractor.py
openspec/changes/add-cookies-from-browser/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-yt-transcribe-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-add-no-ffmpeg-flag/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-add-paragraph-breaks-raw-md/: design.md  (+2 more)
openspec/changes/fix-format-selector-fallback/: design.md  proposal.md  tasks.md
openspec/changes/operationalize-toolkit-repo/: design.md  tasks.md
openspec/specs/audio-download/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/installation-setup/: spec.md
openspec/specs/local-transcription/: spec.md
openspec/specs/pipeline-orchestration/: spec.md
openspec/specs/transcribe-core/: spec.md
openspec/specs/translate-config/: spec.md
openspec/specs/translate-engine/: spec.md
openspec/specs/translate-skill/: spec.md
openspec/specs/vault-import/: spec.md
prompts/: meeting-summary-prompt.md
transcribe_core/: __init__.py  formatter.py  silence.py  slugify.py  transcriber.py
translate/: cli.py  config.py  translator.py
vault_import/: __init__.py  cli.py  config.py  importer.py
yt_transcribe/: cli.py  config.py  downloader.py  formatter.py  transcriber.py
(+79 files in other folders)
